--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,7 +34,7 @@ services:
       interval: 10s
       timeout: 2s
       retries: 2
-    image: postgres:11.7
+    image: postgres:16.1-bookworm
     networks:
       main:
         ipv4_address: ${POSTGRES_HOST}
