--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,12 +1,13 @@
-alembic==1.4.3
-connexion[swagger-ui]==2.7.0
-flask==1.1.2
-flask-script==2.0.6
-flask-jwt-extended==3.24.1
-flask-migrate==2.5.3
-flask-sqlalchemy==2.4.4
-gunicorn==20.0.4
-psycopg2-binary==2.8.6
-python-dateutil==2.8.1
-pytz==2020.4
-requests==2.24.0
+alembic==1.13.1
+connexion[flask,swagger-ui]==3.0.5
+Flask==3.0.0
+Flask-Script==2.0.6
+Flask-JWT-Extended==4.6.0
+Flask-Migrate==4.0.5
+Flask-SQLAlchemy==3.1.1
+gunicorn==21.2.0
+moto==4.2.13
+psycopg2-binary==2.9.9
+python-dateutil==2.8.2
+pytz==2023.3.post1
+requests==2.31.0
