--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,5 +1,5 @@
 alembic==1.13.1
-connexion[flask,swagger-ui]==3.0.5
+connexion[flask,swagger-ui,uvicorn]==3.0.5
 Flask==3.0.0
 Flask-Script==2.0.6
 Flask-JWT-Extended==4.6.0
