--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -14,6 +14,4 @@ COPY . .
 
 EXPOSE 5000
 
-ENTRYPOINT ["uvicorn"]
-
-CMD ["--host", "0.0.0.0", "--port", "5000", "app:app"]
+CMD ["uvicorn", "--host", "0.0.0.0", "--port", "5000", "app:app"]
